--- a/Project/DjangoProj/static/css/Custom/Patient_6.css
+++ b/Project/DjangoProj/static/css/Custom/Patient_6.css
@@ -193,12 +193,11 @@ body
 }
 
 /* Start Exam Button */
-.start_exam_form
+.start_exam_btn
 {
-  margin: 1em 0 0.5em 0;
+  margin: 0;
   width: 100%;
   padding: 0;
-
 }
 
 .visit_btn
