figured out signals and fixed diary screen

--- a/Project/DjangoProj/templates/diary.html
+++ b/Project/DjangoProj/templates/diary.html
@@ -5,9 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Diary</title>
 		<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-		<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/Form.css' %}"> -->
 		<link rel="stylesheet" href="{% static 'css/Custom/Navbar3.css' %}">
-		<link rel="stylesheet" href="{% static 'css/Custom/Reminders2.css' %}">
+		<link rel="stylesheet" href="{% static 'css/Custom/Diary.css' %}">
 		<script type="text/javascript" src="{% static 'js/Custom/Navbar.js' %}"></script>
 	</head>
 	<body>
