--- a/Project/DjangoProj/static/css/Custom/Diary.css
+++ b/Project/DjangoProj/static/css/Custom/Diary.css
@@ -1,61 +1,57 @@
-* {
-  box-sizing: border-box;
+* 
+{
+	box-sizing: border-box;
 }
 
 body
 {
-  font-family: Arial;
-  margin: 1.5em 5em 0 5em;
-  padding: 2em;
-  min-height: 100%;
+	font-family: Arial;
+	margin: 1.5em 5em 0 5em;
+	padding: 2em;
+	min-height: 100%;
 }
 
 .main
 {
-  margin-left: 7em;
-  background: #f1f1f1;
-  height: 100%;
-  min-height: 500px;
-  /*margin-top: */
+	margin-left: 7em;
+	background: #f1f1f1;
+	height: 100%;
+	min-height: 500px;
 }
 
 .section
 {
-  margin: 0 auto;
-  width: 90%;
-  height: 100%;
-  padding: 2em 0 5em 0;
+	margin: 0 auto;
+	width: 90%;
+	height: 100%;
+	padding: 2em 0 5em 0;
 }
 
-.reminders_table
+.diary_table
 {
-  /*max-width: 80%;*/
-  margin: 0 auto;
-  padding: 0.5em;
-  overflow-y: auto;
+	margin: 0 auto;
+	padding: 0.5em;
+	overflow-y: auto;
 }
 
-.reminders_table table
+.diary_table table
 {
-  margin: 2em 2em 0 2em;
-  max-width: 95%;
-  /*object-fit: fill;*/
-  background-color: white;
+	margin: 2em 2em 0 2em;
+	max-width: 95%;
+	background-color: white;
 }
 
 .info
 {
-  background-color: white;
-  /*margin: 0.5em;*/
-  /*margin-bottom: 5em;*/
-  padding: 1em;
-  min-height: 100%;
+	background-color: white;
+	padding: 1em;
+	min-height: 100%;
 }
 
 .info > h4
 {
-  text-decoration: underline;
-  font-weight: bold;
-  text-align: center;
-  margin-bottom: 1em;
+	text-decoration: underline;
+	font-weight: bold;
+	text-align: center;
+	margin-bottom: 1em;
 }
