modal works, now adding overdue reminders table

--- a/Project/DjangoProj/templates/patient.html
+++ b/Project/DjangoProj/templates/patient.html
@@ -342,6 +342,7 @@
 			var navbar = document.getElementsByClassName("navbar")[0];
 			var sticky = navbar.offsetTop;
 			var span = document.getElementsByClassName("close")[0];
+			var rem_modal = document.getElementById("reminder_popup");
 
 			function myFunction() 
 			{
