about to add decision tree to views

--- a/Project/DjangoProj/static/css/Custom/Patient_10.css
+++ b/Project/DjangoProj/static/css/Custom/Patient_10.css
@@ -176,6 +176,11 @@ body
   background-color: rgba(0,0,0,0.4);
 }
 
+.overdue
+{
+  text-decoration-color: red;
+}
+
 /* Modal Content */
 .modal-content {
   background-color: #fefefe;
