--- a/Project/DjangoProj/templates/patient.html
+++ b/Project/DjangoProj/templates/patient.html
@@ -6,7 +6,7 @@
 		<title>Patients</title>
 		<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 		<link rel="stylesheet" href="{% static 'css/Custom/Navbar3.css' %}">
-		<link rel="stylesheet" href="{% static 'css/Custom/Patient_9.css' %}">
+		<link rel="stylesheet" href="{% static 'css/Custom/Patient_10.css' %}">
 		<script type="text/javascript" src="{% static 'js/Custom/Navbar.js' %}"></script>
 	</head>
 	<body>
@@ -73,12 +73,43 @@
 			<br>
 			{% if patient is None %}
 				{% if user_type == "Receptionists" %}
-					<div id="reminder_popup">	
-						<!-- Modal content -->
+					<div id="reminder_popup">
 						<div class="modal-content">
 							<span class="close">&times;</span>
 							<div class="alert alert-warning">
-								<strong>Warning!</strong> Reminders are overdue
+								<strong>Warning!</strong> The Following Reminders Are Overdue
+							</div>
+							<div class="rem_table">
+								<table class="table">
+									<thead class="thead-inverse">
+										<tr class="bg-dark text-white">
+											<th>Patient Name</th>
+											<th>Date</th>
+											<th>Location</th>
+											<th>Notes</th>
+										</tr>
+									</thead>
+									<tbody>
+										{% for rem in overdue_rem %}
+											<tr class="overdue">
+												<td>
+													<a href="{% url 'patient_info' id=rem.patient.id %}">
+														{{ rem.patient.patient_name }}
+													</a>
+												</td>
+												<td class="align-middle">
+													{{ rem.rem_date }}
+												</td>
+												<td class="align-middle">
+													{{ rem.location }}
+												</td>
+												<td class="align-middle">
+													{{ rem.message }}
+												</td>
+											</tr>
+										{% endfor %}
+									</tbody>
+								</table>
 							</div>
 						</div>
 					</div>
@@ -299,7 +330,7 @@
 							</table>
 						{% else %}
 							<div class="empty_message alert alert-secondary">
-								No upcoming reminders
+								No reminders
 							</div>
 						{% endif %}
 					</div>
@@ -356,7 +387,6 @@
 
 			function rem_popup()
 			{
-				window.alert("{{first_login}}");
 				document.getElementById("reminder_popup").style.display = "block";
 			}
 
