--- a/Project/DjangoProj/static/css/Custom/Exam4.css
+++ b/Project/DjangoProj/static/css/Custom/Exam4.css
@@ -110,10 +110,6 @@ body
 
 #popup
 {
-/*  margin: 0 auto;
-  max-width: 85%;
-  margin: 0 2em 0 2em;
-  display: none;*/
   display: none;
   position: fixed;
   z-index: 1;
@@ -127,9 +123,9 @@ body
   background-color: rgba(0,0,0,0.4);
 }
 
-.overdue
+.process_info
 {
-  text-decoration-color: red;
+  margin-left: 0.2em;
 }
 
 /* Modal Content */
@@ -138,7 +134,7 @@ body
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 50%;
 }
 
 /* The Close Button */
