--- a/Project/DjangoProj/templates/exam.html
+++ b/Project/DjangoProj/templates/exam.html
@@ -4,8 +4,7 @@
 		<meta charset="utf-8">
 		<title>Exam</title>
 		<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-		<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/Custom/Form.css' %}"> -->
-		<link rel="stylesheet" type="text/css" href="{% static 'css/Custom/Exam3.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/Custom/Exam4.css' %}">
 		<link rel="stylesheet" href="{% static 'css/Custom/Navbar3.css' %}">
 	</head>
 	<body>
@@ -26,7 +25,7 @@
 						<strong>Info!</strong> Processing the Exam Information
 					</div>
 					<div class="process_info">
-						Processing 
+						Please wait while the system processes the examination information
 					</div>
 				</div>
 			</div>		
@@ -127,7 +126,10 @@
 
 			function displayMessage()
 			{
-				document.getElementById("popup").style.display = "block";
+				setTimeout(function()
+				{
+					document.getElementById("popup").style.display = "block";
+				}, 1500);
 			}
 
 			span.onclick = function() 
